# advent-of-code

./: Cargo.toml  LICENSE.txt  README.md  devenv.nix  flake.nix
inputs/: d2-p1-example.txt
src/: lib.rs
