[package]
name = "advent-of-code-2024"
version = "0.1.0"
edition = "2021"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = "1.0"
enumset = "1.1"
itertools = "0.13"
regex = "1.11"

[[bin]]
name = "d1"

[[bin]]
name = "d2"

[[bin]]
name = "d3"

[[bin]]
name = "d4"

[[bin]]
name = "d5"

[[bin]]
name = "d6"

[[bin]]
name = "d7"
